--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^22.5.5",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/webpack-node-externals": "^3.0.4",
     "babel-loader": "^9.2.1",
     "bcrypt": "^5.1.1",
     "nodemon": "^3.1.7",
